--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,50 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #212a35;
+  overflow-x: hidden;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+table > thead > tr > th {
+  border: 3px solid #212a35;
+}
+table > tbody > tr > th {
+  border: 3px solid #212a35;
+}
+table > tbody > tr > td {
+  border: 3px solid #212a35;
+}
+a {
+  text-decoration: none;
+  color: #42ba96;
+}
+img {
+  height: 35vh;
+  object-fit: cover;
+}
+::-webkit-scrollbar {
+  width: 7px;
+}
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+/* Handle */
+::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  background: #42ba96;
+}
+::-webkit-scrollbar-thumb:window-inactive {
+  background: #129b72;
+  border-radius: 5px;
 }
